--- a/Weatherstation_Utils.ipynb
+++ b/Weatherstation_Utils.ipynb
@@ -20,11 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ":0: FutureWarning: IPython widgets are experimental and may change in the future.\n"
+     ]
+    }
+   ],
    "source": [
     "# ------- Notebook config\n",
     "%matplotlib inline\n",
@@ -68,14 +76,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Jemez_1_4_18_17.txt',\n",
+       " 'Jemez_4_4_18_17.txt',\n",
+       " 'Jemez_10_4_18_17.txt',\n",
+       " 'Jemez_2_4_18_17.txt',\n",
+       " 'Jemez_6_4_18_17.txt',\n",
+       " 'Jemez_3_4_18_17.txt',\n",
+       " 'Jemez_8_4_18_17.txt',\n",
+       " 'Jemez_9_4_18_17.txt',\n",
+       " 'Jemez_5_4_18_17.txt']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Quickly list all the files in the data directory\n",
-    "fileList = next(os.walk(dataDir))[2]"
+    "fileList = next(os.walk(dataDir))[2]\n",
+    "fileList"
    ]
   },
   {
@@ -88,24 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "global name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-a53dd02c41ba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mmetfile\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfileList\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[0mmetdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparseAndReadMetData\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmetfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m     \u001b[0mmetdf_a\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprepareTimeStamps\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmetdf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mrawSummaryPlots\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmetdf_a\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutDir\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Research\\JFSP 2015\\watchdogs\\WatchdogUtils\\watchdogutils.py\u001b[0m in \u001b[0;36mparseAndReadMetData\u001b[1;34m(fname)\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mlocation\u001b[0m       \u001b[1;33m=\u001b[0m \u001b[0mfname\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'_'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mstationNum\u001b[0m     \u001b[1;33m=\u001b[0m \u001b[0mfname\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'_'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[0mdf\u001b[0m             \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataDir\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msep\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'\\t'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mskiprows\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m     \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Locale'\u001b[0m\u001b[1;33m]\u001b[0m   \u001b[1;33m=\u001b[0m \u001b[0mlocation\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'LoggerID'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstationNum\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: global name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Diagnostic plot creation\n",
     "# Usage: Step through the three functions defined above, in a loop where the \n",
@@ -119,7 +134,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "for metfile in fileList:  \n",
-    "    metdf = parseAndReadMetData(metfile)\n",
+    "    metdf = parseAndReadMetData(dataDir, metfile)\n",
     "    metdf_a = prepareTimeStamps(metdf)\n",
     "    rawSummaryPlots(metdf_a, outDir)\n",
     "    plotWindRose(metdf_a, outDir)\n",
